2012-04-26  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Disable nyan-mode default, too slow.

	* init-basic.el: Disable global-hl-line-mode.

	* init-misc.el (require): Don't enable highlight-symbol-mode
	global, only in program modes.

	* init-basic.el: Don't enable linum-mode global, only enable in
	program modes.

2012-04-25  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Fix csharp-mode setting.

2012-04-11  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (fboundp): Fix ido and ffap.

2012-04-05  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add php-mode.

2012-01-25  Meteor Liu  <meteor1113@gmail.com>

	* Move sample to etc/

2012-01-18  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (ace-jump-mode): Add ace-jump-mode.
	(and): Don't save ac completion history file.
	("viper"): Fix vimpulse setting.
	("ace-jump-mode"): Fix ace-jump-face-foreground.

	* init-basic.el (300): Setup zone-when-idle.

2012-01-15  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (init-emms): Set emms to support mpg123.

2012-01-12  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (kbd): Bind Ctrl + mouse wheel to text scale.

	* init-misc.el: Add volatile-highlights.

2012-01-09  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add color-theme.

2012-01-04  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (filesets-data): Fix filesets.

2012-01-03  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (filesets-data): Use filesets.

	* init-misc.el (htmlize-buffer): autoload htmlize.

2011-12-28  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Disable display time.

	* init-misc.el (init-emms): Update emms modeline setting.

2011-12-27  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (after-make-frame-functions): Fix background color.
	(after-make-frame-functions): Fix frame's background color.

	* init-misc.el (require): Fix highlight-symbol face.

	* init-basic.el (dired-mode-hook): Fix dired key setting(terminal